<resources>
    <string name="app_name">BilVend</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="register">Sign Up</string>
    <string name="signup">Sign up now!</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="email">E-mail</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="password">Password</string>
    <string name="repassword">Re-enter password</string>
    <string name="passwordsdontmatch">Passwords don\'t match</string>
    <string name="createAcc">Create account</string>
    <string name="title_activity_main_page">mainPage</string>
    <string name="BilVend">BilVend</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="noRegistration">Continue without registration*</string>
    <string name="noRegistration_explanation">This will limit some of application features</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="inbox">Inbox</string>
    <string name="favorites">Favorites</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="sign_up">Sign up</string>
    <string name="profile">My Profile</string>
    <string name="prompt_msg">Type your message &#8230;</string>
    <string name="action_send">Send</string>
    <string name="send_button">send Button</string>
    <string name="sample_message">Hello!</string>
    <string name="logo">logo</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_ad_page">adPage</string>
    <string name="title_activity_ad_publishing_page">adPublishingPage</string>
    <string name="finish_publishing">Finish Publishing</string>
    <string name="category">Category</string>
    <string name="choose_category">Choose category</string>
</resources>
