<?xml version="1.0" encoding="UTF-8"?>

    <RelativeLayout tools:context="com.example.csgroupg.bilvend.ChatPage"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:label="@string/inbox"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
        ></android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/chatMate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="22dp" />

    </RelativeLayout>

    <ListView android:layout_height="452dp"
        android:layout_width="match_parent"
        android:id="@+id/chatList"
        android:layout_marginTop="54dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_height="57dp"
        android:layout_width="318dp"
        android:id="@+id/inputMessage"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:hint="@string/prompt_msg"
        android:ems="10"
        android:layout_alignParentBottom="true"/>

    <ImageButton
        android:id="@+id/sendButton"
        android:layout_width="56dp"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@color/cardview_light_background"
        android:contentDescription="@string/send_button"
        app:srcCompat="@drawable/ic_action_send_button" />

</RelativeLayout>